--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -23,34 +23,34 @@ services:
     image: portainer/portainer-ce
 
   catalog.api:
-    image: catalogapi
+    image: ${DOCKER_REGISTRY-}catalogapi
     build:
-      context: ./Services
-      dockerfile: Catalog/Catalog.API/Dockerfile
+      context: .
+      dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
   basket.api:
-    image: basketapi
+    image: ${DOCKER_REGISTRY-}basketapi
     build:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
   discount.api:
-    image: discountapi
+    image: ${DOCKER_REGISTRY-}discountapi
     build:
       context: .
       dockerfile: Services/Discount/Discount.API/Dockerfile
 
   discount.grpc:
-    image: discountgrpc
+    image: ${DOCKER_REGISTRY-}discountgrpc
     build:
-      context: ./Services
-      dockerfile: Discount/Discount.Grpc/Dockerfile
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
   ordering.api:
-    image: orderingapi
+    image: ${DOCKER_REGISTRY-}orderingapi
     build:
-      context: ./Services
-      dockerfile: Ordering/Ordering.API/Dockerfile
+      context: .
+      dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
   ocelotapigw:
     image: ${DOCKER_REGISTRY-}ocelotapigw
@@ -64,8 +64,14 @@ services:
       context: .
       dockerfile: ApiGateways/Shopping.Aggregator/Dockerfile
 
+  aspnetrunbasics:
+    image: ${DOCKER_REGISTRY-}aspnetrunbasics
+    build:
+      context: .
+      dockerfile: WebApps/AspnetRunBasics/Dockerfile
+
 volumes:
-  mongo_data: 
+  mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
