--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -3,15 +3,16 @@
     "ConnectionString": "localhost:6379"
   },
   "GrpcSettings": {
-    "DiscountUrl": "http://localhost:5009"
+    "DiscountUrl": "http://localhost:5003"
   },
   "EventBusSettings": {
-    "HostAddress": "ampq://guest:guest@localhost:5672"
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
