--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,19 +1,20 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=admin1234#;"
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
   },
   "EmailSettings": {
-    "FromAddress": "gsapkar@gmail.com",
+    "FromAddress": "ezozkme@gmail.com",
     "ApiKey": "",
-    "FromName": "Goce"
+    "FromName": "Mehmet"
   },
   "EventBusSettings": {
-    "HostAddress": "ampq://guest:guest@localhost:5672"
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
